Cherry-pick 273318@main (c1f8a9e81920). https://bugs.webkit.org/show_bug.cgi?id=267881

Unreviewed, build fix for CLoop
    https://bugs.webkit.org/show_bug.cgi?id=267881
    rdar://121391447

    * Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:
    (JSC::CLoop::execute):

    Canonical link: https://commits.webkit.org/273318@main